# aspell.cvs

./: COPYINGS  FIXMEs  Makefile.am  README  README-CVS  TODO  TODO-0.61  affentry.cpp  affentry.hpp  affix.cpp  affix.hpp  autogen  config-debug  config-opt  configure.ac  data.tar.bz2  en.cwl.bz2  mk-dict  rm-auto
auto/: Makefile.am  Makefile.in  mk-doc.pl  mk-src.in  mk-src.pl
auto/MkSrc/: CcHelper.pm  Create.pm  Info.pm  ProcCc.pm  ProcImpl.pm  ProcNative.pm  ProcNativeImpl.pm  Read.pm
common/: Makefile.am  Makefile.in  asc_ctype.hpp  basic_list.hpp  block_slist-t.hpp  block_slist.hpp  cache-t.hpp  cache.cpp  cache.hpp  can_have_error.cpp  can_have_error.hpp  char_vector.hpp  check_list.hpp  checker.cpp  checker.hpp  clone_ptr-t.hpp  clone_ptr.hpp  config.cpp  config.cpp.old  config.hpp  convert.cpp  convert.hpp  convert_filter.cpp  convert_filter.hpp  convert_impl.hpp  copy_ptr-t.hpp  copy_ptr.hpp  directory.cpp  directory.hpp  document_checker.cpp  document_checker.hpp  emulation.hpp  encoded.hpp  enumeration.hpp  error.cpp  error.hpp  errors.cpp  file_data_util.cpp  file_util.cpp  file_util.hpp  (+59 more)
data/: Makefile.am  Makefile.in  cp1250.cmap  cp1250.cset  cp1251.cmap  cp1251.cset  cp1252.cmap  cp1252.cset  cp1252.map  cp1253.cmap  cp1253.cset  cp1254.cmap  cp1254.cset  cp1255.cmap  cp1255.cset  cp1256.cmap  cp1256.cset  cp1257.cmap  cp1257.cset  cp1258.cmap  cp1258.cset  iso-8859-1.cmap  iso-8859-1.cset  iso-8859-10.cmap  iso-8859-10.cset  iso-8859-11.cmap  iso-8859-11.cset  iso-8859-13.cmap  iso-8859-13.cset  iso-8859-14.cmap  iso-8859-14.cset  iso-8859-15.cmap  iso-8859-15.cset  iso-8859-16.cmap  iso-8859-16.cset  iso-8859-2.cmap  iso-8859-2.cset  iso-8859-3.cmap  iso-8859-3.cset  iso-8859-4.cmap  (+30 more)
examples/: Makefile.am  aspell0.c  example-c.c  list-dicts.c  pspell.c
interfaces/: Makefile.in
interfaces/cc/: Makefile.in  pspell.h
lib/: Makefile.am  Makefile.in  convert-c.cpp  document_checker-c.cpp  filter_entry.hpp  find_manager.cpp  find_speller.cpp  language-c.hpp  language-cm.cpp  munch_list.cpp  new_checker.cpp  new_config.cpp  new_filter.cpp  new_fmode.cpp  speller-cm.cpp
lib5/: Makefile.am
m4/: Makefile.in
manual/: Makefile.am  aspell-dev.texi  aspell.1  aspell.texi  crubadan.texi  devel2.lyx  devel2.tex  fdl.tex  html.sty  html2txt.pl  lang-supported.texi  lang-syllabic.texi  lang-unsupported.texi  man-proc.pl  manual2.lyx  manual2.per  manual2.tex  oo-only.texi  readme.texi
manual/dev-html/: Makefile.am
manual/dev-text/: Makefile.am
manual/man-html/: Makefile.am
manual/man-text/: Makefile.am
modules/: Makefile.am  Makefile.in
modules/aspell/: Makefile.am  amanager.hpp  aspell-util.cpp  asuggest.hpp  block_vector.hpp  data.cpp  data.hpp  data_id.hpp  data_util.hpp  editdist.cpp  editdist.hpp  editdist2.hpp  file_data_util.cpp  file_data_util.hpp  hash_simple_string.hpp  l2editdist.cpp  language.cpp  language.hpp  leditdist.cpp  leditdist.hpp  manager_impl.cpp  manager_impl.hpp  matrix.hpp  multi_ws.cpp  phonet.cpp  phonet.hpp  phonetic.cpp  phonetic.hpp  primes.cpp  primes.hpp  readonly_ws.cpp  simple_string.hpp  split.cpp  split.hpp  suggest.cpp  suggest.hpp  typo_editdist.cpp  typo_editdist.hpp  vector_hash-t.hpp  vector_hash.hpp  (+5 more)
modules/filter/: Makefile.am  Makefile.in  context-filter.opt  context.cpp  context.hpp  email-filter.info  email-filter.opt  email.cpp  genconv.cpp  loadable.cpp  mk-tex.conv.pl  mk-texinfo.conv.pl  nroff-filter.info  nroff.cpp  sgml-filter.info  sgml-filter.opt  sgml.cpp  tex-filter.info  tex-filter.opt  tex.conv  tex.cpp  texinfo-filter.info  texinfo.conv  texinfo.cpp  url-filter.info  url-filter.opt  url.cpp
modules/filter/modes/: ccpp.amf  comment.amf  email.amf  html.amf  none.amf  nroff.amf  perl.amf  sgml.amf  tex.amf  texinfo.amf  url.amf
modules/speller/: Makefile.in
modules/speller/default/: Makefile.am  Makefile.in  affentry.cpp  affentry.hpp  affix.cpp  affix.hpp  aspell-util.cpp  aspeller.hpp  asuggest.hpp  check_list.hpp  checker_impl.cpp  data.cpp  data.hpp  data_id.hpp  data_util.hpp  editdist.cpp  editdist.hpp  file_data_util.cpp  file_data_util.hpp  l2editdist.cpp  lang_impl.cpp  lang_impl.hpp  language.cpp  language.hpp  leditdist.cpp  leditdist.hpp  matrix.hpp  multi_ws.cpp  phonet.cpp  phonet.hpp  phonetic.cpp  phonetic.hpp  readonly_ws.cpp  speller_impl.cpp  speller_impl.hpp  split.cpp  suggest.cpp  suggest.hpp  typo_editdist.cpp  typo_editdist.hpp  (+8 more)
modules/tokenizer/: Makefile.am  Makefile.in  basic.cpp
myspell/: munch.c
po/: LINGUAS  Makevars  POTFILES.in  aspell.pot  be.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  ga.po  it.po  mn.po  nl.po  pt_BR.po  ro.po  ru.po  rw.po  sl.po  sr.po  sv.po  tg.po  uk.po  vi.po  wa.po
prog/: Makefile.am  Makefile.in  aspell.cpp  check_funs.cpp  check_funs.hpp  checker_string.cpp  checker_string.hpp  compress.c  prezip.c  wlzip.c
scripts/: Makefile.am  Makefile.in  ispell  munchlist  prezip  spell
win32/: settings.h
